--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Swordroot's LP project",
   "scripts": {
     "dev": "nuxt",
+    "prd": "nuxt build && nuxt start",
+    "deploy:hosting": "firebase deploy --only hosting --project swordroot-lp",
     "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
