お問い合わせフォームのバックエンド追加

--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,10 @@
     ],
     "rewrites": [
       {
+        "source": "/api/**",
+        "function": "contact"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
