--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/eslint-config": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^1.12.0",
     "@typescript-eslint/parser": "^1.12.0",
-    "eslint": "^6.0.1"
+    "eslint": "^6.0.1",
+    "ts-jest": "^24.0.2"
   }
 }
