--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lpproj",
   "version": "1.0.0",
+  "private": true,
   "description": "Swordroot's LP project",
   "scripts": {
     "dev": "nuxt",
@@ -22,9 +23,28 @@
   "devDependencies": {
     "@nuxt/typescript": "^2.8.1",
     "@nuxtjs/eslint-config": "^1.0.1",
+    "@types/jest": "^24.0.18",
     "@typescript-eslint/eslint-plugin": "^1.12.0",
     "@typescript-eslint/parser": "^1.12.0",
-    "eslint": "^6.0.1",
+    "eslint": "^5.16.0",
+    "jest": "^24.9.0",
     "ts-jest": "^24.0.2"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "tsconfig.json"
+      }
+    },
+    "testMatch": [
+      "**/tests/**/*.test.ts"
+    ]
   }
 }
