jestの設定を追加

--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     },
     "testMatch": [
       "**/tests/**/*.test.ts"
-    ]
+    ],
+    "moduleNameMapper": {
+      "^#/(.+)": "<rootDir>/$1"
+    }
   }
 }
