--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "deploy:hosting": "firebase deploy --only hosting --project swordroot-lp",
     "deploy:functions": "cd functions && npm run build && firebase deploy --only functions --project swordroot-lp",
     "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Swordroot",
   "license": "ISC",
