--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,11 @@
     },
     "types": [
       "@types/node",
-      "@nuxt/vue-app"
+      "@nuxt/vue-app",
+      "@types/jest"
     ]
-  }
+  },
+  "include": [
+    "./tests/**/*.ts"
+  ]
 }
