--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,10 +88,10 @@ workflows:
     jobs:
       - build
       - test:
-        requries: 
+        requires: 
           - build
       - deploy:
-        requries: 
+        requires: 
           - test
         filters:
           branches:
