--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^1.12.0",
     "@typescript-eslint/parser": "^1.12.0",
     "eslint": "^5.16.0",
+    "firebase-tools": "^7.3.2",
     "jest": "^24.9.0",
     "ts-jest": "^24.0.2"
   },
