--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@nuxtjs/axios": "^5.5.4",
     "nuxt": "^2.8.1",
     "ts-node": "^8.3.0",
+    "uuid": "^3.3.3",
     "vue-property-decorator": "^8.2.1"
   },
   "devDependencies": {
     "@nuxt/typescript": "^2.8.1",
     "@nuxtjs/eslint-config": "^1.0.1",
     "@types/jest": "^24.0.18",
+    "@types/uuid": "^3.4.6",
     "@typescript-eslint/eslint-plugin": "^1.12.0",
     "@typescript-eslint/parser": "^1.12.0",
     "eslint": "^5.16.0",
