--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "@nuxtjs/axios": "^5.5.4",
+    "axios": "^0.19.0",
+    "node-html-parser": "^1.1.16",
     "nuxt": "^2.8.1",
     "ts-node": "^8.3.0",
     "uuid": "^3.3.3",
