--- a/functions/package.json
+++ b/functions/package.json
@@ -14,11 +14,31 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@nuxtjs/axios": "^5.5.4",
     "axios": "^0.19.0",
-    "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.3.0"
+    "express": "^4.17.1",
+    "firebase-admin": "^8.7.0",
+    "firebase-functions": "^3.3.0",
+    "node-html-parser": "^1.1.16",
+    "nuxt": "^2.10.2",
+    "ts-node": "^8.3.0",
+    "uuid": "^3.3.3",
+    "vue-property-decorator": "^8.2.1"
   },
   "devDependencies": {
+    "@nuxt/types": "^0.3.4",
+    "@nuxt/typescript": "^2.8.1",
+    "@nuxtjs/eslint-config": "^1.0.1",
+    "@types/express": "^4.17.0",
+    "@types/express-serve-static-core": "^4.16.11",
+    "@types/jest": "^24.0.18",
+    "@types/uuid": "^3.4.6",
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "@typescript-eslint/parser": "^1.12.0",
+    "eslint": "^5.16.0",
+    "firebase-tools": "^7.3.2",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.0.2",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
   },
