--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dev:nuxt": "nuxt",
     "prd:nuxt": "npm run build:nuxt && firebase serve --only hosting,functions",
     "build:nuxt": "nuxt build && cp -rf ./functions/dist/dist/client ./public && mv ./public/client ./public/_nuxt",
+    "build:functions": "cd functions && npm run build && cd ../",
     "deploy:hosting": "npm run build:nuxt && firebase deploy --only hosting --project swordroot-lp",
-    "deploy:functions": "cd functions && npm run build && firebase deploy --only functions --project swordroot-lp",
+    "deploy:functions": "npm run build:functions && firebase deploy --only functions --project swordroot-lp",
     "deploy:all": "npm run deploy:functions && npm run deploy:hosting",
     "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
     "test": "jest"
