--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev:nuxt": "nuxt",
     "prd:nuxt": "npm run build:nuxt && firebase serve --only hosting,functions",
-    "build:nuxt": "nuxt build && cp -rf ./functions/dist/dist/client ./public && ls ./public && mv ./public/client ./public/_nuxt",
+    "build:nuxt": "nuxt build && cp -rf ./functions/dist/dist/client ./public && mv ./public/client ./public/_nuxt",
+    "build:nuxt:ci": "nuxt build && mkdir ./public/_nuxt && cp -rf ./functions/dist/dist/client ./public/_nuxt",
     "build:functions": "cd functions && npm run build && cd ../",
     "deploy:hosting": "npm run build:nuxt && firebase deploy --only hosting --project swordroot-lp",
     "deploy:functions": "npm run build:functions && firebase deploy --only functions --project swordroot-lp",
